# fera

./: .containerignore  .gitignore  CLAUDE.md  Containerfile  INSTALL.md  Makefile  README.md  install.sh  pyproject.toml
deploy/: fera-gateway.service  fera-knowledge-indexer.service  fera-memory.service  fera-webui.service  himalaya-config-template.toml
docs/: fera-auth-design.md  fera-cron-routing-design.md  fera-dream-cycle-design.md  fera-heartbeat-design.md  fera-memory-writing-compaction.md  fera-system-initialization-design.md  fera-tool-integration-map.md  fera-web-ui-design.md  openclaw-reference-guide.md  openclaw-web-ui.md
docs/librarian/: knowledge-indexer-daemon-design.md  librarian-agent-design.md
docs/plans/: 2026-03-21-drain-response-race-fix-design.md  2026-03-21-systemd-credentials-design.md
src/fera/: agent.py  config.py  cron.py  logger.py  prompt.py  render.py  sanitize.py  setup.py
tests/: test_agent.py  test_ask_user_question_integration.py  test_config.py  test_cron.py  test_logger.py  test_prompt.py  test_render.py  test_sanitize.py  test_setup.py
tests/adapters/: test_base.py  test_bus.py  test_commands.py  test_mattermost.py  test_telegram.py
tests/gateway/: test_auth.py  test_client.py  test_dream_cycle.py  test_gateway_render.py  test_heartbeat.py  test_lanes.py  test_mcp.py  test_memory_writer.py  test_metrics.py  test_pool.py  test_protocol.py  test_reconnect.py  test_runner.py  test_server.py  test_sessions.py  test_stats.py  test_status_handlers.py  (+2 more)
webui/: index.html  package-lock.json  package.json  vite.config.ts
(+88 files in other folders)
